--- a/web/src/locales/ru.json
+++ b/web/src/locales/ru.json
@@ -1,13 +1,11 @@
 {
   "country-panel": {
     "source": "источник",
-    "carbonintensity": "интенсивность выбросов CO₂ (CO₂эк/кВт⋅ч)",
     "lowcarbon": "с низким уровнем CO₂",
     "renewable": "ВИЭ",
     "helpfrom": "с помощью",
     "noDataAtTimestamp": "Данные временно недоступны в указанном промежутке времени",
     "noLiveData": "Актуализированные данные временно недоступны для данной зоны",
-    "estimated": "приближенные данные",
     "aggregated": "сводные данные",
     "dataIsEstimated": "Некоторые данные по этому региону приблизительные. Мы описали нашу методологию оценки <a href='https://github.com/electricitymaps/electricitymaps-contrib/wiki/Estimation-methods' target='_blank'>здесь</a>.",
     "estimatedTooltip": "Данные в реальном времени для этой зоны приближены на основе данных из источника и допущений модели",
@@ -23,17 +21,14 @@
   "footer": {
     "foundbugs": "Вы обнаружили ошибку или у Вас есть идея? Сообщите нам о них",
     "here": "здесь",
-    "faq-text": "Есть вопросы? Загляните сюда",
-    "faq": "часто задаваемые вопросы."
+    "faq-text": "Есть вопросы? Загляните сюда"
   },
   "legends": {
     "windpotential": "ветровой потенциал",
     "solarpotential": "солнечной потенциал",
-    "colorblindmode": "Режим для дальтоников",
-    "carbonintensity": "Выпуск углерода"
+    "colorblindmode": "Режим для дальтоников"
   },
   "tooltips": {
-    "carbonintensity": "Интенсивность выбросов CO₂",
     "zoneHeader": {
       "lowcarbon": "Включая возобновляемые и ядерные источники"
     },
@@ -57,10 +52,7 @@
     "selectLanguage": "Выбрать язык"
   },
   "misc": {
-    "maintitle": "Эмиссии CO₂ производства электроенергии в реальном времени",
-    "faq": "Часто Задаваемые Вопросы",
-    "dismiss": "Закрыть",
-    "reload": "Перезагрузить"
+    "maintitle": "Эмиссии CO₂ производства электроенергии в реальном времени"
   },
   "wind": "ВЭС",
   "solar": "СЭС",
@@ -1153,5 +1145,12 @@
     "workTogether-answer": "Мы активно ищем новые возможности для сотрудничества. <a href='mailto:app@electricitymaps.com'>Пришлите нам E-mail!</a>",
     "disclaimer-question": "Отказ от ответственности",
     "disclaimer-answer": "<a href='https://electricitymaps.com/' target='_blank'>Electricity Maps</a> публикует данные и изображения на ресурсе <a href='https://www.electricitymaps.com/' target='_blank'>Electricity Maps</a> для ознакомительных целей. Данный проект не гарантирует корректность и не предоставляет каких-либо форм гарантий. Проект сохраняет за собой право изменять содержимое в любое время или удалять его части без какого-либо уведомления. electricityMap не предполагает какой-либо ответственности, и не может преследоваться за какой-либо урон или потери возможные в результате неточности, неполноценности, несвоевременности или устаревания информации на проекте electicityMap или информации полученной из данного ресурса. Запрещается использовать данную веб-страницу или индивидуальные элементы в других веб-проектах, без официального уведомления и согласия со стороны electricityMap. <br/><br/>Вся интеллектуальная собственность принадлежит правообладателям и лицензорам. Копирование, поставка или любое другое использование данных материалов, в частности данных электроэнергии, запрещается без письменного разрешения со стороны electricityMap, за исключением и только в случаях разрешенных законодательным образом (таких как 'Право на цитирование'), если не указано иное для конкретных материалов. <br/><br/>Этот отказ от ответственности может время от времени обновляться."
+  },
+  "shared": {
+    "carbonintensity": "интенсивность выбросов CO₂ (CO₂эк/кВт⋅ч)",
+    "estimated": "приближенные данные",
+    "faq": "часто задаваемые вопросы.",
+    "reload": "Перезагрузить",
+    "dismiss": "Закрыть"
   }
 }
