--- a/web/src/locales/el.json
+++ b/web/src/locales/el.json
@@ -23,7 +23,6 @@
   },
   "country-panel": {
     "source": "Πηγή",
-    "carbonintensity": "Ένταση Άνθρακα",
     "lowcarbon": "Χαμηλών εκπομπών άνθρακα",
     "renewable": "Ανανεώσιμες",
     "helpfrom": "με συνεισφορά από",
@@ -40,17 +39,14 @@
   "footer": {
     "foundbugs": "Βρήκατε σφάλματα ή έχετε ιδέες; Αναφέρετέ τα",
     "faq-text": "Κάτι είναι ασαφές; Ρίξτε μια ματιά στις",
-    "faq": "συνήθεις ερωτήσεις.",
     "here": "εδώ"
   },
   "legends": {
     "windpotential": "Δυναμικό αιολικής ενέργειας",
     "solarpotential": "Δυναμικό ηλιακής ενέργειας",
-    "colorblindmode": "φιλικό προς αχρωματοψία",
-    "carbonintensity": "Ένταση άνθρακα"
+    "colorblindmode": "φιλικό προς αχρωματοψία"
   },
   "tooltips": {
-    "carbonintensity": "Ένταση άνθρακα",
     "zoneHeader": {
       "lowcarbon": "Περιλαμβάνει τις ανανεώσιμες και την πυρηνική"
     },
@@ -74,10 +70,7 @@
     "selectLanguage": "Επιλογή γλώσσας"
   },
   "misc": {
-    "maintitle": "Ζωντανές εκπομπές CO₂ κατανάλωσης ηλεκτρικής ενέργειας",
-    "faq": "Συχνές Ερωτήσεις",
-    "dismiss": "Κλείσιμο",
-    "reload": "Νέα φόρτωση"
+    "maintitle": "Ζωντανές εκπομπές CO₂ κατανάλωσης ηλεκτρικής ενέργειας"
   },
   "wind": "αιολική",
   "solar": "ηλιακή",
@@ -1346,5 +1339,11 @@
     "ZW": {
       "zoneName": "Ζιμπάμπουε"
     }
+  },
+  "shared": {
+    "carbonintensity": "Ένταση Άνθρακα",
+    "faq": "συνήθεις ερωτήσεις.",
+    "reload": "Νέα φόρτωση",
+    "dismiss": "Κλείσιμο"
   }
 }
