--- a/web/src/locales/zh-TW.json
+++ b/web/src/locales/zh-TW.json
@@ -46,7 +46,6 @@
   },
   "country-panel": {
     "source": "來源",
-    "carbonintensity": "碳強度",
     "lowcarbon": "低碳能源",
     "renewable": "可再生能源",
     "helpfrom": "with help from",
@@ -56,7 +55,6 @@
       "licensing": "因授權因素，尚無該地區的電價"
     },
     "dataIsDelayed": "該地區的資料可能落後 {{hours}} 小時，無即時資料。",
-    "estimated": "預估",
     "aggregated": "總計",
     "dataIsEstimated": "該地區的部分資料爲估計值。請參考我們的<a href='https://github.com/electricityMaps/electricitymaps-contrib/wiki/Estimation-methods' target='_blank'>估計方法</a>。",
     "exchangesAreMissing": "電力交換已被納入計算，但尚未顯示。請參考我們的先前的<a href='https://github.com/electricityMaps/electricitymaps-contrib/wiki/Historical-aggregates' target='_blank'>合計資料</a>。",
@@ -82,7 +80,6 @@
   },
   "estimation-badge": {
     "partially-estimated": "部分估計",
-    "fully-estimated": "已估計",
     "outage": "不可用"
   },
   "estimation-card": {
@@ -178,17 +175,14 @@
   "footer": {
     "foundbugs": "發現錯誤或有其他想法？請",
     "faq-text": "有任何不清楚的地方？ 請參考",
-    "faq": "常見問題",
     "here": "回報"
   },
   "legends": {
     "windpotential": "風力發電潛力",
     "solarpotential": "太陽能發電潛力",
-    "colorblindmode": "色盲模式",
-    "carbonintensity": "碳強度"
+    "colorblindmode": "色盲模式"
   },
   "tooltips": {
-    "carbonintensity": "碳強度",
     "zoneHeader": {
       "lowcarbon": "包含再生能源和核能"
     },
@@ -242,9 +236,6 @@
   },
   "misc": {
     "maintitle": "生活用電二氧化碳排放量",
-    "faq": "常見問題",
-    "dismiss": "關閉",
-    "reload": "重新載入",
     "slow-loading-text": "仍在加載中，如果持續如此，請嘗試重新載入..."
   },
   "wind": "風力",
@@ -1685,5 +1676,13 @@
       "countryName": "菲律賓",
       "zoneName": "維薩亞斯群島"
     }
+  },
+  "shared": {
+    "carbonintensity": "碳強度",
+    "estimated": "預估",
+    "fully-estimated": "已估計",
+    "faq": "常見問題",
+    "reload": "重新載入",
+    "dismiss": "關閉"
   }
 }
